--- a/front-end/front/public/index.html
+++ b/front-end/front/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,12 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Site/app criado pela t.i 16 para o senac tito"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
-   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
     <title>React App</title>
   </head>
   <body>
