updated module course

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -9,12 +9,11 @@
       name="description"
       content="Site/app criado pela t.i 16 para o senac tito"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Senac</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Você está rodando javascript nesse App</noscript>
     <div id="root"></div>
   </body>
 </html>
