updated form Login

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Site/app criado pela t.i 16 para o senac tito"
     />
+    <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+  />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Senac</title>
   </head>
