--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -13,7 +13,7 @@
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet"
   />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <title>Senac</title>
   </head>
   <body>
