updated login form screen

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -13,8 +13,9 @@
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet"
   />
+  
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <title>Senac</title>
+    <title>Senac Lapa Tito</title>
   </head>
   <body>
     <noscript>Você está rodando javascript nesse App</noscript>
