--- a/front-end-layout/Principal/index.html
+++ b/front-end-layout/Principal/index.html
@@ -19,11 +19,17 @@
     <label for="check"><i class="material-icons">menu</i></label>
     <div class="menu">
       <nav>
+        <div class="profileI">
+          <section>
+          </section>
+          <p>Olá, @Nome!</p>
+          <input type="button" name="" id="" value="Meu Perfil">
+        </div>
         <a href="">
           <div class="link">Principal</div>
         </a>
         <a href="">
-          <div class="link">Cursos</div>
+          <div class="link">Cadastro</div>
         </a>
         <a href="">
           <div class="link">?</div>
@@ -49,17 +55,13 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item"><strong>Carga horária</strong>: 30 horas</li>
             <li class="list-group-item"><strong>Descrição:</strong><br>
-              Idade mínima: 16 anos
-              Escolaridade mínima: cursando ensino médio
+
               </li>
           </ul>
           <div class="card-body">
             <a href="https://www.sp.senac.br/jsp/default.jsp?newsID=DYNAMIC,oracle.br.dataservers.CourseDataServer,selectCourse&course=24220&template=395.dwt&testeira=367&unit=TIT" class="card-link">Ver mais</a>
           </div>
         </div>  
-
-
-
 
 
         <div class="card">
@@ -71,8 +73,8 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item"><strong>Carga horária</strong>: 180 horas</li>
             <li class="list-group-item"><strong>Descrição:</strong><br>
-Idade mínima: 16 anos
-Escolaridade mínima: ensino fundamental completo</li>
+
+            </li>
           </ul>
           <div class="card-body">
             <a href="https://www.sp.senac.br/jsp/default.jsp?newsID=DYNAMIC,oracle.br.dataservers.CourseDataServer,selectCourse&course=22910&template=395.dwt&testeira=367&unit=TIT" class="card-link">Ver mais</a>
@@ -91,7 +93,6 @@ Escolaridade mínima: ensino fundamental completo</li>
           <ul class="list-group list-group-flush">
             <li class="list-group-item"><strong>Carga horária</strong>: 30 horas</li>
             <li class="list-group-item"><strong>Descrição:</strong><br>
-              Proporcionar formação profissional inicial de jovens em rotinas de escritório e fornecer conhecimentos básicos para uma atuação proativa na busca de um emprego e para o exercício de suas funções.
 
             </li>
           </ul>
@@ -111,8 +112,7 @@ Escolaridade mínima: ensino fundamental completo</li>
             <ul class="list-group list-group-flush">
               <li class="list-group-item"><strong>Carga horária</strong>: 160 horas</li>
               <li class="list-group-item"><strong>Descrição:</strong><br>
-                Idade mínima: 14 anos
-                Escolaridade mínima: ensino fundamental 2 incompleto</li>
+               </li>
             </ul>
             <div class="card-body">
               <a href="https://www.sp.senac.br/jsp/default.jsp?newsID=DYNAMIC,oracle.br.dataservers.CourseDataServer,selectCourse&course=22898&template=380.dwt&unit=NONE&testeira=474" class="card-link">Ver mais</a>
