Iniciada tela de cadastro e feito alguns ajustes na responsividade

--- a/front-end-layout/Cadastro/index.html
+++ b/front-end-layout/Cadastro/index.html
@@ -25,10 +25,10 @@
               <p>Olá, @Nome!</p>
               <input type="button" name="" id="" value="Meu Perfil">
             </div>
-        <a href="">
+        <a href="../Cadastro/index.html">
           <div class="link">Principal</div>
         </a>
-        <a href="">
+        <a href="#">
           <div class="link">Cadastro</div>
         </a>
         <a href="">
@@ -44,35 +44,39 @@
         <img src="../Principal/img/logo.png" alt="" class="logo" />
       </div>
       <!-- Conteúdo -->
-        <div class="registerBox">
+        <div class="registerMainBox">
+          <div class="registerSecondaryBox">
+          <section class="boxBar"></section>
           <form action="">
-            <label for="">Nome Completo: *</label>
-            <input type="text" id="nome">
-            <label for="escolaridade">Escolaridade: *</label>
-            <select name="" id="escolaridade">
-              <option value=""></option>
-              <option value="">NA</option>
-              <option value="">NA</option>
-              <option value="">NA</option>
-            </select>
-            <label for="escolaridade">Curso que frequenta: *</label>
-            <input type="text" id="escolaridade">
-            <label for="profissao">Profissão atual: </label>
-            <input type="text" id="profissao">
-            <label for="dataNasc">Data de Nascimento:</label>
-            <input type="date" id="dataNasc">
-            <label for="">Interesses:</label>
-            <div class="interesses">
-            <input type="checkbox" name="" id=""> 1
-            <input type="checkbox" name="" id=""> 2
-            <input type="checkbox" name="" id=""> 3
-            <input type="checkbox" name="" id=""> 4
-          </div>
-          <label for="sobre">Uma frase que define você:
-            </label>
-            <input type="text" id="sobre">
-            <input type="submit">
+            <div class="label">
+                <span>
+                    <i class="material-icons">account_box</i>
+                </span>
+                  <label for="nome"></label>
+                  <input type="text" placeholder="Nome completo" id="nome" /><br>
+            </div>
+            <div class="label">
+                <span>
+                    <i class="material-icons">date_range</i>
+                </span>
+              
+                  <input type="date" placeholder="" id="data"/><br>
+            </div>
+            <div class="label">
+                <span>
+                    <i class="material-icons">dashboard</i>
+                </span>
+                  <input type="text" placeholder="" id="email" /><br>
+            </div>
+            <div class="label">
+                <span>
+                    <i class="material-icons">account_box</i>
+                </span>
+                  <input type="text" placeholder="" id="email" /><br>
+            </div>
+            
           </form>
+        </div>
         </div>
     <!-- Barra de navegação -->
 <!-- Search -->
