--- a/front-end-layout/Principal/index.html
+++ b/front-end-layout/Principal/index.html
@@ -25,10 +25,10 @@
           <p>Olá, @Nome!</p>
           <input type="button" name="" id="" value="Meu Perfil">
         </div>
-        <a href="">
+        <a href="/Principal/">
           <div class="link">Principal</div>
         </a>
-        <a href="">
+        <a href="../Cadastro/index.html">
           <div class="link">Cadastro</div>
         </a>
         <a href="">
@@ -123,6 +123,7 @@
 <!-- Search -->
 
     <!-- Compiled and minified JavaScript -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   
   </body>
