--- a/front-end-layout/Principal/index.html
+++ b/front-end-layout/Principal/index.html
@@ -1,256 +1,201 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Senac</title>
-    <link rel="stylesheet" href="./css/style.css" />
 
-    <!-- Compiled and minified CSS -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-  </head>
-  <!-- Menu Hamburguer -->
-  <body>
-    <input type="checkbox" id="check" />
-    <label for="check"><i class="material-icons">menu</i></label>
-    <div class="menu">
-      <nav>
-        <div class="profileI">
-          <section></section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Senac</title>
+  <link rel="stylesheet" href="./css/style.css" />
+
+  <!-- Compiled and minified CSS -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+</head>
+<!-- Menu Hamburguer -->
+
+<body>
+  <label for="check"><i class="material-icons" id="menu">menu</i></label>
+  <div class="menu">
+    <nav>
+      <div class="profileI">
+        <section></section>
+      </div>
+      <div class="options">
+        <div class="optionsProfile">
+          <section class="profileUI">
+            <a href=""><img src="img/home.svg" alt="" />Página principal</a>
+          </section>
+          <section class="profileUI">
+            <a href="../Profile/"><img src="img/editprofile.svg" alt="" />Editar meu perfil</a>
+          </section>
+          <section class="profileUI">
+            <a href=""><img src="img/interesses.svg" alt="" />Meus interesses</a>
+          </section>
+          <section class="sociais">
+            <a href="https://www.facebook.com/senaclapatito" target="_blank"><img src="img/facebook.svg" alt="" /></a>
+            <a href="https://www.instagram.com/senactito/" target="_blank"><img src="img/instagram.svg" alt="" /></a>
+            <a href=""><img src="img/linkedin.svg" alt="" /></a>
+            <a href=""><img src="img/twitter.svg" alt="" /></a>
+          </section>
         </div>
-        <div class="options">
-          <div class="optionsProfile">
-            <section class="profileUI">
-              <a href=""><img src="img/home.svg" alt="" />Página principal</a>
-            </section>
-            <section class="profileUI">
-              <a href="../Profile/"
-                ><img src="img/editprofile.svg" alt="" />Editar meu perfil</a
-              >
-            </section>
-            <section class="profileUI">
-              <a href=""
-                ><img src="img/interesses.svg" alt="" />Meus interesses</a
-              >
-            </section>
-            <section class="sociais">
-              <a href="https://www.facebook.com/senaclapatito" target="_blank"
-                ><img src="img/facebook.svg" alt=""
-              /></a>
-              <a href="https://www.instagram.com/senactito/" target="_blank"
-                ><img src="img/instagram.svg" alt=""
-              /></a>
-              <a href=""><img src="img/linkedin.svg" alt=""/></a>
-              <a href=""><img src="img/twitter.svg" alt=""/></a>
-            </section>
+      </div>
+    </nav>
+    <div class="logout">
+      <section>
+        <a href=""><img src="img/logout.svg" alt="" />Sair</a>
+      </section>
+    </div>
+  </div>
+  <!-- Logo -->
+  <div class="logo">
+    <img src="img/logo.png" alt="" class="logo" />
+  </div>
+  <!-- Conteúdo -->
+  <div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel">
+    <!--Indicadores-->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-1z" data-slide-to="1"></li>
+      <li data-target="#carousel-example-1z" data-slide-to="2"></li>
+      <li data-target="#carousel-example-1z" data-slide-to="3"></li>
+
+    </ol>
+    <!--/.Indicators-->
+    <!--Slides-->
+    <div class="carousel-inner" role="listbox">
+      <!--primeiro slide-->
+      <div class="carousel-item active" data-interval="4000">
+        <div class="card w-20">
+          <img class="card-img-top" src="img/AssistenteFiscal.jpg" alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title">Assistente Fiscal</h5>
+            <!-- <p class="card-text"></p> -->
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <strong>Descrição:</strong><br />
+            </li>
+          </ul>
+          <div class="card-body morecourses">
+            <a href="https://www.sp.senac.br/jsp/default.jsp?newsID=a514.htm&testeira=367&unit=TIT&sub=1"
+              class="card-link" target="_blank"> Mais</a>
           </div>
         </div>
-      </nav>
-      <div class="logout">
-        <section>
-          <a href=""><img src="img/logout.svg" alt="" />Sair</a>
-        </section>
+      </div>
+      <!--/primeiro slide-->
+      <!--segundo slide-->
+      <div class="carousel-item" data-interval="4000">
+        <div class="card w-20">
+          <img class="card-img-top" src="img/organizadordeeventos.jpg" alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title">Organizador de Eventos</h5>
+            <!-- <p class="card-text"></p> -->
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <strong>Descrição:</strong><br />
+            </li>
+          </ul>
+          <div class="card-body morecourses">
+            <a href="https://www.sp.senac.br/jsp/default.jsp?newsID=a514.htm&testeira=367&unit=TIT&sub=1"
+              class="card-link" target="_blank"> Mais</a>
+          </div>
+        </div>
+      </div>
+      <!--/segundo slide-->
+      <!--terceiro slide-->
+      <div class="carousel-item" data-interval="4000">
+        <div class="card w-20">
+          <img class="card-img-top" src="img/AdministracaoFinanceira.jpg" alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title">Administração Financeira</h5>
+            <!-- <p class="card-text"></p> -->
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <strong>Descrição:</strong><br />
+            </li>
+          </ul>
+          <div class="card-body morecourses">
+            <a href="https://www.sp.senac.br/jsp/default.jsp?newsID=a514.htm&testeira=367&unit=TIT&sub=1"
+              class="card-link" target="_blank"> Mais</a>
+          </div>
+        </div>
+      </div>
+      <!--/terceiro slide-->
+      <!--quarto slide-->
+      <div class="carousel-item" data-interval="4000">
+        <div class="card  w-20">
+          <img class="card-img-top" src="img/AuxiliarEscritorio.jpg" alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title">Auxiliar de Escritório</h5>
+            <p class="card-text"></p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <strong>Descrição:</strong><br />
+            </li>
+          </ul>
+          <div class="card-body morecourses">
+            <a href="https://www.sp.senac.br/jsp/default.jsp?newsID=a514.htm&testeira=367&unit=TIT&sub=1"
+              class="card-link" target="_blank"> Mais</a>
+          </div>
+        </div>
+      </div>
+      <!--quarto slide-->
+    </div>
+    <!--/.Slides-->
+    <!--Controls-->
+    <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Anterior</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Próximo</span>
+    </a>
+    <!--/.Controls-->
+  </div>
+  </div>
+  <div class="menuMobile" id="menuMobile">
+    <div class="menuMoptions" id="menuMoptions">
+      <div class="buttonShowLogin">
+        <label for="menuLogin" id="menuLogin"><img src="img/login.svg" alt="" id="imgLogin" onlick="chngimg()"></label>
+      </div>
+      <div class=" formLogin" id="formLogin">
+        <form>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Endereço de email</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+              placeholder="Seu email">
+            <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com
+              ninguém.</small>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Senha</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+          </div>
+          <input type="submit" value="Entrar" class="btn">
+        </form>
       </div>
     </div>
-    <!-- Logo -->
-    <div class="logo">
-      <img src="img/logo.png" alt="" class="logo" />
-    </div>
-    <!-- Conteúdo -->
-    <div class="conteudo">
-      <div
-        id="carousel-example-1z"
-        class="carousel slide carousel-fade"
-        data-ride="carousel"
-      >
-        <!--Indicadores-->
-        <ol class="carousel-indicators">
-          <li
-            data-target="#carousel-example-1z"
-            data-slide-to="0"
-            class="active"
-          ></li>
-          <li data-target="#carousel-example-1z" data-slide-to="1"></li>
-          <li data-target="#carousel-example-1z" data-slide-to="2"></li>
-          <li data-target="#carousel-example-1z" data-slide-to="4"></li>
-        </ol>
-        <!--/.Indicators-->
-        <!--Slides-->
-        <div class="carousel-inner" role="listbox">
-          <!--First slide-->
-          <div class="carousel-item active" data-interval="4000">
-            <div class="card w-20">
-              <img
-                class="card-img-top"
-                src="img/AssistenteFiscal.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Assistente Fiscal</h5>
-                <!-- <p class="card-text"></p> -->
-              </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                  <strong>Carga horária</strong>: 30 horas
-                </li>
-                <li class="list-group-item">
-                  <strong>Descrição:</strong><br />
-                </li>
-              </ul>
-              <div class="card-body">
-                <a
-                  href="https://www.sp.senac.br/jsp/default.jsp?newsID=DYNAMIC,oracle.br.dataservers.CourseDataServer,selectCourse&course=24220&template=395.dwt&testeira=367&unit=TIT"
-                  class="card-link"
-                  >Ver mais</a
-                >
-              </div>
-            </div>
-          </div>
-          <!--/First slide-->
-          <!--Second slide-->
-          <div class="carousel-item" data-interval="4000">
-            <div class="card w-20">
-              <img
-                class="card-img-top"
-                src="img/organizadordeeventos.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Organizador de Eventos</h5>
-                <!-- <p class="card-text"></p> -->
-              </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                  <strong>Carga horária</strong>: 180 horas
-                </li>
-                <li class="list-group-item">
-                  <strong>Descrição:</strong><br />
-                </li>
-              </ul>
-              <div class="card-body">
-                <a
-                  href="https://www.sp.senac.br/jsp/default.jsp?newsID=DYNAMIC,oracle.br.dataservers.CourseDataServer,selectCourse&course=22910&template=395.dwt&testeira=367&unit=TIT"
-                  class="card-link"
-                  >Ver mais</a
-                >
-              </div>
-            </div>
-          </div>
-          <!--/Second slide-->
-          <!--Third slide-->
-          <div class="carousel-item" data-interval="4000">
-            <div class="card w-20">
-              <img
-                class="card-img-top"
-                src="img/AdministracaoFinanceira.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Administração Financeira</h5>
-                <!-- <p class="card-text"></p> -->
-              </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                  <strong>Carga horária</strong>: 30 horas
-                </li>
-                <li class="list-group-item">
-                  <strong>Descrição:</strong><br />
-                </li>
-              </ul>
-              <div class="card-body">
-                <a
-                  href="https://www.sp.senac.br/jsp/default.jsp?newsID=DYNAMIC,oracle.br.dataservers.CourseDataServer,selectCourse&course=22898&template=380.dwt&unit=NONE&testeira=474"
-                  class="card-link"
-                  >Ver mais</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item" data-interval="4000">
-            <div class="card  w-20">
-              <img
-                class="card-img-top"
-                src="img/AuxiliarEscritorio.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Auxiliar de Escritório</h5>
-                <p class="card-text"></p>
-              </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                  <strong>Carga horária</strong>: 160 horas
-                </li>
-                <li class="list-group-item">
-                  <strong>Descrição:</strong><br />
-                </li>
-              </ul>
-              <div class="card-body">
-                <a
-                  href="https://www.sp.senac.br/jsp/default.jsp?newsID=DYNAMIC,oracle.br.dataservers.CourseDataServer,selectCourse&course=22898&template=380.dwt&unit=NONE&testeira=474"
-                  class="card-link"
-                  >Ver mais</a
-                >
-              </div>
-            </div>
-          </div>
-          <!--/Third slide-->
-        </div>
-        <!--/.Slides-->
-        <!--Controls-->
-        <a
-          class="carousel-control-prev"
-          href="#carousel-example-1z"
-          role="button"
-          data-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Anterior</span>
-        </a>
-        <a
-          class="carousel-control-next"
-          href="#carousel-example-1z"
-          role="button"
-          data-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Próximo</span>
-        </a>
-        <!--/.Controls-->
-      </div>
-    </div>
-    <div class="btnLogin">
-      <a href="">Entrar</a>
-    </div>
-    <!--/.Carousel Wrapper-->
-    <!-- Search -->
-    <!-- Compiled and minified JavaScript -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  </body>
+  </div>
+  </div>
+  <!-- Compiled and minified JavaScript -->
+  <script src="js/script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+</body>
+
 </html>
