--- a/front-end-layout/Profile/index.html
+++ b/front-end-layout/Profile/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Senac</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    
-    <!-- Compiled and minified CSS -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Senac</title>
+  <link rel="stylesheet" href="./css/style.css" />
+
+  <!-- Compiled and minified CSS -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+</head>
+
+<body>
   <!-- Menu Hamburguer -->
-  <input type="checkbox" id="check" />
-  <label for="check"><i class="material-icons">menu</i></label>
+  <label for="check"><i class="material-icons" id="menu">menu</i></label>
   <div class="menu">
     <nav>
       <div class="profileI">
@@ -29,19 +29,17 @@
             <a href="../Principal/"><img src="img/home.svg" alt="" />Página principal</a>
           </section>
           <section class="profileUI">
-            <a href="../Profile/"
-              ><img src="img/editprofile.svg" alt="" />Editar meu perfil</a
-            >
+            <a href="../Profile/"><img src="img/editprofile.svg" alt="" />Editar meu perfil</a>
           </section>
           <section class="profileUI">
             <a href=""><img src="img/interesses.svg" alt="" />Meus interesses</a>
           </section>
           <section class="sociais">
-              <a href="https://www.facebook.com/senaclapatito" target="_blank"><img src="img/facebook.svg" alt="" /></a>
-              <a href="https://www.instagram.com/senactito/" target="_blank"><img src="img/instagram.svg" alt="" /></a>
-              <a href=""><img src="img/linkedin.svg" alt="" /></a>
-              <a href=""><img src="img/twitter.svg" alt="" /></a>
-            </section>
+            <a href="https://www.facebook.com/senaclapatito" target="_blank"><img src="img/facebook.svg" alt="" /></a>
+            <a href="https://www.instagram.com/senactito/" target="_blank"><img src="img/instagram.svg" alt="" /></a>
+            <a href=""><img src="img/linkedin.svg" alt="" /></a>
+            <a href=""><img src="img/twitter.svg" alt="" /></a>
+          </section>
         </div>
       </div>
     </nav>
@@ -51,16 +49,95 @@
       </section>
     </div>
   </div>
- 
-    <!-- Logo -->
-      <div class="logo">
-        <img src="img/logo.png" alt="" class="logo" />
+  <!-- Logo -->
+  <!-- <div class="logo">
+      <img src="img/logo.png" alt="" class="logo" />
+    </div> -->
+  <!-- Conteúdo -->
+  <div class="container">
+    <hr class="line1" />
+    <div class="row">
+      <div class="col-md-3">
+        <div class="text-center">
+          <label for="profileImage"><img src="img/photo-camera.svg" class="avatar img-circle" alt="avatar"
+              id="profileImage1" /></label>
+          <h6>Foto de perfil</h6>
+          <input type="file" class="inputProfile" id="profileImage" />
+        </div>
+        <hr class="line2" />
       </div>
-      <!-- Conteúdo -->
-    
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  </body>
+
+      <div class="col-md-9 personal-info">
+        <h3>Informações</h3>
+        <form class="form-horizontal" role="form">
+          <div class="form-group">
+            <label class="col-lg-3 control-label">Nome:</label>
+            <div class="col-lg-8">
+              <input class="inputProfile" type="text" value="" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-3 control-label">Sobrenome:</label>
+            <div class="col-lg-8">
+              <input class="inputProfile" type="text" value="" />
+            </div>
+          </div>
+          <div class="form-group about">
+            <label class="col-lg-3 control-label">Fale sobre você:</label>
+            <div class="col-lg-8">
+              <input class="inputProfile" type="text" value="" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-3 control-label">Seu e-mail:</label>
+            <div class="col-lg-8">
+              <input class="inputProfile" type="text" value="" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3 control-label">Usuário:</label>
+            <div class="col-md-8">
+              <input class="inputProfile" type="text" value="" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3 control-label">Sua senha:</label>
+            <div class="col-md-8">
+              <input class="inputProfile" type="password" value="11111122333" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3 control-label">Confirme sua senha:</label>
+            <div class="col-md-8">
+              <input class="inputProfile" type="password" value="11111122333" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3 control-label"></label>
+            <div class="col-md-8">
+              <input type="button" class="btn btn-primary" value="Salvar alterações" />
+              <span></span>
+              <input type="reset" class="btn btn-default" value="Cancelar" />
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="js/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+</body>
+
 </html>
