HTML & CSS publicados em http://senactito.site/

--- a/front-end-layout/Profile/index.html
+++ b/front-end-layout/Profile/index.html
@@ -26,7 +26,7 @@
       <div class="options">
         <div class="optionsProfile">
           <section class="profileUI">
-            <a href="../Principal/"><img src="img/home.svg" alt="" />Página principal</a>
+            <a href="../"><img src="img/home.svg" alt="" />Página principal</a>
           </section>
           <section class="profileUI">
             <a href="../Profile/"><img src="img/editprofile.svg" alt="" />Editar meu perfil</a>
