--- a/front-end-layout/index.html
+++ b/front-end-layout/index.html
@@ -26,10 +26,10 @@
       <div class="options">
         <div class="optionsProfile">
           <section class="profileUI">
-            <a href=""><img src="img/home.svg" alt="" />Página principal</a>
+            <a href="#"><img src="img/home.svg" alt="" />Página principal</a>
           </section>
           <section class="profileUI">
-            <a href="../Profile/"><img src="img/editprofile.svg" alt="" />Editar meu perfil</a>
+            <a href="./Profile/"><img src="img/editprofile.svg" alt="" />Editar meu perfil</a>
           </section>
           <section class="profileUI">
             <a href=""><img src="img/interesses.svg" alt="" />Meus interesses</a>
